@@ -20,3 +20,4 @@ Changes by ngdeleito (see git history for the full details)
 -- it does no longer provide default bookmarks upon creation of the daily readings folder
 -- it now opens all bookmarks in new tabs
 - removed red tag for links
+- made select boxes for actions non editable
